# bloomberg-lite

./: .env.example  .gitignore  ORCHESTRATION_PROMPT.md  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: update-dashboard.yml  update.yaml
config/: feeds.yaml  metrics.yaml
docs/: CODEBOOK.html  CODEBOOK.md  estat_indicator_reference.md  index.html
src/: __init__.py  main.py
src/connectors/: __init__.py  base.py  coingecko.py  dbnomics.py  ecb.py  estat_dashboard.py  fred.py  hackernews.py  huggingface.py  imf.py  oecd.py  vastai.py  worldbank.py  yahoo.py
src/generator/: __init__.py  html.py
src/storage/: database.py  models.py
src/transforms/: __init__.py  calculations.py
templates/: dashboard.html
tests/: __init__.py  test_connectors.py  test_transforms.py
